# mdlARC_scale

./: .gitignore  README.md  ablation_results.json  pyproject.toml
configs/: large.toml  medium.toml  medium_mps.toml  small.toml  small_mps_experimental.toml  tiny.toml  tiny_mps_experimental.toml
scripts/: ablations.py  eval_wrapper.py  sanitize_data.py  train_wrapper.py
src/: data.py  eval.py  inference.py  train.py  transformer.py  triton_kernels.py  voting.py
tests/: test_data.py  test_eval.py  test_inference.py  test_train.py  test_transformer.py  test_voting.py
